Remove obsolete comment in LayoutFlowThread::mapToVisualRectInAncestorSpace.

In http://crrev.com/2073563002 we reworked mapToVisualRectInAncestorSpace so
that it expects rect to be in physical coordinates, *not* physical coordinates
with flipped block-flow direction.

BUG=616600
TBR=chrishtr

Review-Url: https://codereview.chromium.org/2151093002
Cr-Commit-Position: refs/heads/master@{#405641}

Former-commit-id: 626303cb7dcd51ade39ee4ca6a4b7cb83e933a5f